# Ouranos-AgenticAI-library

./: .env.example  AGENTS.md  ARCHITECTURE.md  LICENSE  MANIFEST.md  PROMPT-STRUCTURE.md  README.md  REQUIREMENTS.md  docker-compose.yml  manifest.yml  pyproject.toml  requirements.txt
api/: __init__.py  config.py  main.py  models.py
api/routers/: __init__.py  agents.py  categories.py  chat.py  prompts.py  search.py
copilot/: README.md
docker/: Dockerfile.api  Dockerfile.frontend
docs/: language-guide.md  translation-guide.md
docs/getting-started/: installation.md  prompt-catalog.md
en/: README.md
en/docs/: contribution.md  usage-guide.md
en/prompts/: README.md
en/prompts/business-management/: business-strategy-consultant.md  ma-due-diligence-consultant.md  marketing-strategy-advisor.md  organizational-change-management-consultant.md  pricing-revenue-management-consultant.md  product-management-guide.md  sales-process-optimizer.md
en/prompts/communication/: brand-messaging-specialist.md
en/prompts/design-development/: api-design-specialist.md  devops-engineer.md  (+5 more)
frontend/: next.config.ts  package.json
prompts/: manifest.yml
prompts/copilot/: README.md
prompts/en/: README.md
prompts/ja/: README.md
scripts/: compress_copilot_prompts.py  convert_to_copilot.py
steering/: product.md  structure.md  tech.md
steering/rules/: ears-format.md  workflow.md
storage/: project-plan.md
storage/changes/: copilot-conversion-report.md
storage/specs/: copilot-conversion-strategy.md  copilot-converter-prompt.md  interactive-platform-requirements.md
(+391 files in other folders)
